consistent-hash.yaml

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - nginx-service
  http:
    - route:
      - destination:
          host: nginx-service
          subset: all

---

apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
 host: nginx-service
 trafficPolicy:
  loadBalancer:
    consistentHash:
      httpHeaderName: x-user
 subsets:
    - name: v1
      labels:
        app: nginx
