dr.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
 host: nginx-service
 trafficPolicy:
   loadBalancer:
     simple: ROUND_ROBIN
 subsets:
    - name: v1
      labels:
        version: A
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
    - name: v2
      labels:
        version: B
