fault-injection.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - nginx-service
  http:
  - fault:
      delay:
        fixedDelay: 10s
        percentage:
          value: 70
      # abort:
      #   httpStatus: 400
      #   percentage:
      #     value: 50
    route:
      - destination:
          host: nginx-service
          subset: v1
        weight: 50
      - destination:
          host: nginx-service
          subset: v2
        weight: 50

---

apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
 host: nginx-service
 trafficPolicy:
   loadBalancer:
     simple: ROUND_ROBIN
 subsets:
    - name: v1
      labels:
        version: A
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
    - name: v2
      labels:
        version: B
